Changed CSS Behind the Toggle Card JS to Ensure Better Compatibility

--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -255,13 +255,13 @@ body {
 }
 
 .expandCard0{
-  visibility: collapse;
+  display: none;
 }
 .expandCard1{
-  visibility: collapse;
+  display: none;
 }
 .expandCard2{
-  visibility: collapse;
+  display: none;
 }
 
 .unselectable {
